[package]
name = "tubestr-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tubestr-backend"
path = "rust/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
hex = "0.4"
http = "1.3"
mdk-core = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "8a8d06c19d617394b0e268f5f9adfad34db3cdf6" }
mdk-sqlite-storage = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "8a8d06c19d617394b0e268f5f9adfad34db3cdf6", features = ["test-utils"] }
mdk-storage-traits = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "8a8d06c19d617394b0e268f5f9adfad34db3cdf6" }
nostr-sdk = { version = "0.44.1", features = ["nip59", "nip98"] }
rusqlite = { version = "0.37", features = ["bundled-sqlcipher", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
